Updated correct link to Martin Saveski

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -145,7 +145,7 @@
       </div>
       <div class="row">
         <div class="twelve columns" style="text-align: center; font-size: 0.8em; margin-top: 10px; color: #555;">
-          Based on the template by <a href="https://msaveski.com/" target="_blank" style="color: #007bff; text-decoration: none;">Martin Saveski</a>.
+          Based on the template by <a href="https://faculty.washington.edu/msaveski/" target="_blank" style="color: #007bff; text-decoration: none;">Martin Saveski</a>.
         </div>
       </div>
     </div>
