Remove Martin name

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,12 +6,12 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>{{ site.data.main_info.name }} | {{ page.title }}</title>
-  <meta name="description" content="Martin Saveski">
-  <meta name="author" content="Martin Saveski">
-  <meta property="og:title" content="Martin Saveski" />
+  <meta name="description" content="Ali Ghodsi">
+  <meta name="author" content="Ali Ghodsi">
+  <meta property="og:title" content="Ali Ghodsi" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://www.martinsaveski.com" />
-  <meta property="og:site_name" content="Martin Saveski" />
+  <meta property="og:site_name" content="Ali Ghodsi" />
   <link rel="canonical" href="http://www.martinsaveski.com" />
 
   <!-- Mobile Specific Metas
@@ -145,7 +145,7 @@
       </div>
       <div class="row">
         <div class="twelve columns" style="text-align: center; font-size: 0.8em; margin-top: 10px; color: #555;">
-          Based on the template by <a href="https://faculty.washington.edu/msaveski/" target="_blank" style="color: #007bff; text-decoration: none;">Martin Saveski</a>.
+          Based on the template by <a href="https://faculty.washington.edu/msaveski/" target="_blank" style="color: #007bff; text-decoration: none;">Ali Ghodsi</a>.
         </div>
       </div>
     </div>
